--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,15 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
 	<title>慕学在线网登录</title>
-	<link rel="stylesheet" type="text/css" href="./static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="./static/css/login.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/login.css">
 </head>
 <body>
 <div class="dialog" id="jsDialog">
 <!--提示弹出框-->
 <div class="successbox dialogbox" id="jsSuccessTips">
     <h1>成功提交</h1>
-    <div class="close jsCloseDialog"><img src="./static/images/dig_close.png"/></div>
+    <div class="close jsCloseDialog"><img src="/static/images/dig_close.png"/></div>
     <div class="cont">
         <h2>您的需求提交成功！</h2>
         <p></p>
@@ -21,9 +21,9 @@
 </div>
 <div  class="noactivebox dialogbox" id="jsUnactiveForm" >
     <h1>邮件验证提示</h1>
-    <div class="close jsCloseDialog"><img src="./static/images/dig_close.png"/></div>
+    <div class="close jsCloseDialog"><img src="/static/images/dig_close.png"/></div>
     <div class="center">
-        <img src="./static/images/send.png"/>
+        <img src="/static/images/send.png"/>
         <p>我们已经向您的邮箱<span class="green" id="jsEmailToActive">12@13.com</span>发送了邮件，<br/>为保证您的账号安全，请及时验证邮箱</p>
         <p class="a"><a class="btn" id="jsGoToEmail" target="_blank" href="http://mail.qq.com">去邮箱验证</a></p>
         <p class="zy_success upmove"></p>
@@ -56,9 +56,9 @@
             <div class="fl slide">
                 <div class="imgslide">
                     <ul class="imgs">
-                            <li><a href=""><img width="483" height="472" src="./static/images/mysql.jpg" /></a></li>
-                            <li><a href=""><img width="483" height="472" src="./static/images/mysql.jpg" /></a></li>
-                            <li><a href=""><img width="483" height="472" src="./static/images/mysql.jpg" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="/static/images/mysql.jpg" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="/static/images/mysql.jpg" /></a></li>
+                            <li><a href=""><img width="483" height="472" src="/static/images/mysql.jpg" /></a></li>
                     </ul>
                 </div>
                 <div class="unslider-arrow prev"></div>
@@ -70,13 +70,14 @@
                     <h2 >动态登录</h2>
                 </div>
                 <form class="tab-form" action="{% url 'login' %}" method="post" autocomplete="off" id="form1">
+                    {% csrf_token %}
                     <div class="form-group marb20 ">
                         <input name="username" id="account_l" type="text" placeholder="手机号/邮箱" />
                     </div>
                     <div class="form-group marb8 ">
                         <input name="password" id="password_l" type="password" placeholder="请输入您的密码" />
                     </div>
-                    <div class="error btns login-form-tips" id="jsLoginTips"></div>
+                    <div class="error btns login-form-tips" id="jsLoginTips">{{ msg }}</div>
                      <div class="auto-box marb38">
 						<a class="fr" href="forgetpwd.html">忘记密码？</a>
                      </div>
@@ -107,9 +108,9 @@
         </div>
     </div>
 </section>
-<script src="./static/js/jquery.min.js" type="text/javascript"></script>
-<script src="./static/js/unslider.js" type="text/javascript"></script>
-<script src="./static/js/validateDialog.js"  type="text/javascript"></script>
-<script src="./static/js/login.js"  type="text/javascript"></script>
+<script src="/static/js/jquery.min.js" type="text/javascript"></script>
+<script src="/static/js/unslider.js" type="text/javascript"></script>
+<script src="/static/js/validateDialog.js"  type="text/javascript"></script>
+<script src="/static/js/login.js"  type="text/javascript"></script>
 </body>
 </html>
