--- a/templates/orglist.html
+++ b/templates/orglist.html
@@ -81,7 +81,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="all">共<span class="key">15</span>家</div>
+                <div class="all">共<span class="key">{{ org_nums }}</span>家</div>
                 <div class="butler_list company list">
                     <div class="layout">
                         <div class="head">
@@ -93,18 +93,21 @@
                         </div>
 
 
-                        {#      列表项        #}
-                        <dl class="des difdes">
+                        {#   列表项  #}
+                        {% for org in all_orgs %}
+                            <dl class="des difdes">
+                           {#       logoimg    #}
                             <dt>
                                 <a href="org-detail-homepage.html">
                                     <img width="200" height="120" class="scrollLoading"
-                                         data-url="#"/>
+                                         data-url="{{ MEDIA_URL }}{{ org.image }}"/>
                                 </a>
                             </dt>
+                            {#    内容数据   #}
                             <dd>
                                 <div class="clearfix">
                                     <a href="org-detail-homepage.html">
-                                        <h1>北京大学</h1>
+                                        <h1>{{ org.name }}</h1>
                                         <div class="pic fl">
 
                                             <img src="../images/authentication.png"/>
@@ -115,9 +118,9 @@
                                     </a>
                                 </div>
                                 <ul class="cont">
-                                    <li class="first"><p class="pic9">课程数：<span>12</span></p>
-                                        <p class="c7">学习人数：<span>23</span></p></li>
-                                    <li class="c8" style="padding-left:18px;">12</li>
+                                    <li class="first"><p class="pic9">课程数：<span>{{ org.course_nums }}</span></p>
+                                        <p class="c7">学习人数：<span>{{ org.students }}</span></p></li>
+                                    <li class="c8" style="padding-left:18px;">{{ org.address }}</li>
                                     <li class="pic10" style="padding-left:18px;">经典课程：
 
                                         <a href="/diary/19/">c语言基础入门</a>
@@ -129,6 +132,7 @@
                             </dd>
                             <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
                         </dl>
+                        {% endfor %}
 
 
                     </div>
