--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}" type="text/javascript"></script>
     {% block custum_css %}
-    
+
     {% endblock %}
 </head>
 
@@ -29,8 +29,8 @@
                 <div class="wp">
                     <div class="fl"><p>服务电话：<b>400-888-888</b></p></div>
 
-                {% if user.is_authenticated %}
-				  <div class="personal">
+                    {% if user.is_authenticated %}
+                        <div class="personal">
                             <dl class="user fr">
                                 <dd>EricLee<img class="down fr" src="/static/images/top_down.png"/></dd>
                                 <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/>
@@ -55,11 +55,11 @@
 
                         </div>
                         </div>
-                {% else %}
+                    {% else %}
                         <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
                         <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
 
-                {% endif %}
+                    {% endif %}
 
             <div class="middle">
                 <div class="wp">
@@ -81,31 +81,13 @@
                 </div>
             </div>
 
-            {#选项列表#}
-            {% block  chiocelist%}
-                <nav>
-                            <div class="nav">
-                                <div class="wp">
-                                    <ul>
-                                        <li class="active"><a href="index.html">首页</a></li>
-                                        <li>
-                                            <a href="course-list.html">
-                                                公开课<img class="hot" src="/static/images/nav_hot.png">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="teachers-list.html">授课教师</a>
-                                        </li>
-                                        <li><a href="{% url 'orglist' %}">授课机构</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </nav>
+            {#跳转链接#}
+            {% block  chiocelist %}
+
             {% endblock %}
 
-
         </div>
-            </div>
+        </div>
         </div>
 
     </header>
