--- a/templates/orglist.html
+++ b/templates/orglist.html
@@ -12,9 +12,9 @@
         <div class="nav">
             <div class="wp">
                 <ul>
-                    <li><a href="index.html">首页</a></li>
+                    <li><a href="{% url 'index' %}">首页</a></li>
                     <li>
-                        <a href="course-list.html">
+                        <a href="{% url 'courselist' %}">
                             公开课<img class="hot" src="/static/images/nav_hot.png">
                         </a>
                     </li>
@@ -46,18 +46,19 @@
     <section>
         <div class="wp butler_list_box list">
             <div class='left'>
+                {#  筛选选项  #}
                 <div class="listoptions">
                     <ul>
                         <li>
                             <h2>机构类别</h2>
                             <div class="cont">
-                                <a href="?city="><span class="active2">全部</span></a>
+                                <a href="?city={{ city.id }}"><span class="{% ifequal category ''%}active2{% endifequal %}">全部</span></a>
 
-                                <a href="?ct=pxjg&city="><span class="">培训机构</span></a>
+                                <a href="?ct=pxjg&city={{ city.id }}"><span class="{% ifequal category 'pxjg'%}active2{% endifequal %}">培训机构</span></a>
 
-                                <a href="?ct=gx&city="><span class="">高校</span></a>
+                                <a href="?ct=gx&city={{ city.id }}"><span class="{% ifequal category 'gx'%}active2{% endifequal %}">高校</span></a>
 
-                                <a href="?ct=gr&city="><span class="">个人</span></a>
+                                <a href="?ct=gr&city={{ city.id }}"><span class="{% ifequal category 'gr'%}active2{% endifequal %}">个人</span></a>
 
                             </div>
                         </li>
@@ -65,24 +66,21 @@
                             <h2>所在地区</h2>
                             <div class="more">更多</div>
                             <div class="cont">
-                                <a href="?ct="><span class="active2">全部</span></a>
+                                <a href="?ct={{ category }}"><span class="active2">全部</span></a>
 
-                                <a href="?city=1&ct="><span class="">北京市</span></a>
-
-                                <a href="?city=2&ct="><span class="">上海市</span></a>
-
-                                <a href="?city=3&ct="><span class="">广州市</span></a>
-
-                                <a href="?city=4&ct="><span class="">深圳市</span></a>
-
-                                <a href="?city=5&ct="><span class="">天津市</span></a>
+                                {% for city in all_citys %}
+                                    <a href="?city={{ city.id }}&ct={{ category }}"><span class="">{{ city.name }}</span></a>
+                                {% endfor %}
 
                             </div>
                         </li>
                     </ul>
                 </div>
+                {#   机构数量显示   #}
                 <div class="all">共<span class="key">{{ org_nums }}</span>家</div>
+
                 <div class="butler_list company list">
+                    {#   机构信息   #}
                     <div class="layout">
                         <div class="head">
                             <ul class="tab_header">
@@ -92,70 +90,87 @@
                             </ul>
                         </div>
 
-
-                        {#   列表项  #}
-                        {% for org in all_orgs %}
+                        {#   机构信息列表项  #}
+                        {% for org in all_orgs.object_list %}
                             <dl class="des difdes">
-                           {#       logoimg    #}
-                            <dt>
-                                <a href="org-detail-homepage.html">
-                                    <img width="200" height="120" class="scrollLoading"
-                                         data-url="{{ MEDIA_URL }}{{ org.image }}"/>
-                                </a>
-                            </dt>
-                            {#    内容数据   #}
-                            <dd>
-                                <div class="clearfix">
+                                {#       logoimg    #}
+                                <dt>
                                     <a href="org-detail-homepage.html">
-                                        <h1>{{ org.name }}</h1>
-                                        <div class="pic fl">
-
-                                            <img src="../images/authentication.png"/>
-
-                                            <img src="../images/gold.png"/>
-
-                                        </div>
+                                        <img width="200" height="120" class="scrollLoading"
+                                             data-url="{{ MEDIA_URL }}{{ org.image }}"/>
                                     </a>
-                                </div>
-                                <ul class="cont">
-                                    <li class="first"><p class="pic9">课程数：<span>{{ org.course_nums }}</span></p>
-                                        <p class="c7">学习人数：<span>{{ org.students }}</span></p></li>
-                                    <li class="c8" style="padding-left:18px;">{{ org.address }}</li>
-                                    <li class="pic10" style="padding-left:18px;">经典课程：
+                                </dt>
+                                {#    内容数据   #}
+                                <dd>
+                                    <div class="clearfix">
+                                        <a href="org-detail-homepage.html">
+                                            <h1>{{ org.name }}</h1>
+                                            <div class="pic fl">
 
-                                        <a href="/diary/19/">c语言基础入门</a>
+                                                <img src="../images/authentication.png"/>
 
-                                        <a href="/diary/16/">数据库基础</a>
+                                                <img src="../images/gold.png"/>
 
-                                    </li>
-                                </ul>
-                            </dd>
-                            <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
-                        </dl>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <ul class="cont">
+                                        <li class="first"><p class="pic9">课程数：<span>{{ org.course_nums }}</span></p>
+                                            <p class="c7">学习人数：<span>{{ org.students }}</span></p></li>
+                                        <li class="c8" style="padding-left:18px;">{{ org.address }}</li>
+                                        <li class="pic10" style="padding-left:18px;">经典课程：
+
+                                            <a href="/diary/19/">c语言基础入门</a>
+
+                                            <a href="/diary/16/">数据库基础</a>
+
+                                        </li>
+                                    </ul>
+                                </dd>
+                                <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
+                            </dl>
                         {% endfor %}
 
-
                     </div>
+                    {#  页码  #}
                     <div class="pageturn">
                         <ul class="pagelist">
+                            {#   上一页   #}
+                            {% if all_orgs.has_previous %}
+                                <li class="long"><a href="?{{ all_orgs.previous_page_number.querystring }}"
+                                                    class="page">上一页</a></li>
+                            {% endif %}
+                            {#   页码循环    #}
+                            {% for page in all_orgs.pages %}
+                                {% if page %}
+                                    {% ifequal page all_orgs.number %}
+                                        {# 用户点击的是否是当前页码 #}
+                                        <li class="active"><a
+                                                href="?{{ page.querystring }}">{{ page }}</a>
+                                        </li>
+                                    {% else %}
+                                        <li class="page"><a
+                                                href="?{{ page.querystring }}">{{ page }}</a>
+                                        </li>
+                                    {% endifequal %}
+                                {% else %}
+                                    <li class="none">...</li>
+                                {% endif %}
+                            {% endfor %}
 
-
-                            <li class="active"><a href="?page=1">1</a></li>
-
-
-                            <li><a href="?page=2" class="page">2</a></li>
-
-
-                            <li><a href="?page=3" class="page">3</a></li>
-
-
-                            <li class="long"><a href="?page=2">下一页</a></li>
-
+                            {#  下一页   #}
+                            {% if all_orgs.has_next %}
+                                <li class="long"><a href="?{{ all_orgs.next_page_number.querystring }}"
+                                                    class="page">下一页</a></li>
+                            {% endif %}
 
                         </ul>
                     </div>
+
                 </div>
             </div>
+
+            {# 我要学习 #}
             <div class="right companyright">
                 <div class="head">我要学习</div>
                 <form class="rightform" id="jsStayForm">
@@ -176,9 +191,9 @@
                 </form>
             </div>
 
+            {# 右边的机构排名 #}
             <div class="right companyrank layout">
                 <div class="head">授课机构排名</div>
-
 
                 <dl class="des">
                     <dt class="num fl">1</dt>
@@ -204,8 +219,8 @@
                     </dd>
                 </dl>
 
-
             </div>
+
         </div>
     </section>
 {% endblock %}
