--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,14 @@
                 <ul>
                     <li class="active"><a href="{% url 'index' %}">首页</a></li>
                     <li>
-                        <a href="{% url 'courselist' %}">
+                        <a href="{% url 'course:list' %}">
                             公开课<img class="hot" src="/static/images/nav_hot.png">
                         </a>
                     </li>
                     <li>
                         <a href="teachers-list.html">授课教师</a>
                     </li>
-                    <li><a href="{% url 'orglist' %}">授课机构</a></li>
+                    <li><a href="{% url 'org:list' %}">授课机构</a></li>
                 </ul>
             </div>
         </div>
