--- a/templates/orglist.html
+++ b/templates/orglist.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 
 {#title#}
 {% block title %}
@@ -14,20 +14,19 @@
                 <ul>
                     <li><a href="{% url 'index' %}">首页</a></li>
                     <li>
-                        <a href="{% url 'courselist' %}">
+                        <a href="{% url 'course:list' %}">
                             公开课<img class="hot" src="/static/images/nav_hot.png">
                         </a>
                     </li>
                     <li>
                         <a href="teachers-list.html">授课教师</a>
                     </li>
-                    <li class="active"><a href="{% url 'orglist' %}">授课机构</a></li>
+                    <li class="active"><a href="{% url 'org:list' %}">授课机构</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 {% endblock %}
-
 
 {#面包屑#}
 {% block custum_bread %}
@@ -52,13 +51,17 @@
                         <li>
                             <h2>机构类别</h2>
                             <div class="cont">
-                                <a href="?city={{ city.id }}"><span class="{% ifequal category ''%}active2{% endifequal %}">全部</span></a>
+                                <a href="?city={{ city.id }}"><span
+                                        class="{% ifequal category '' %}active2{% endifequal %}">全部</span></a>
 
-                                <a href="?ct=pxjg&city={{ city.id }}"><span class="{% ifequal category 'pxjg'%}active2{% endifequal %}">培训机构</span></a>
+                                <a href="?ct=pxjg&city={{ city.id }}"><span
+                                        class="{% ifequal category 'pxjg' %}active2{% endifequal %}">培训机构</span></a>
 
-                                <a href="?ct=gx&city={{ city.id }}"><span class="{% ifequal category 'gx'%}active2{% endifequal %}">高校</span></a>
+                                <a href="?ct=gx&city={{ city.id }}"><span
+                                        class="{% ifequal category 'gx' %}active2{% endifequal %}">高校</span></a>
 
-                                <a href="?ct=gr&city={{ city.id }}"><span class="{% ifequal category 'gr'%}active2{% endifequal %}">个人</span></a>
+                                <a href="?ct=gr&city={{ city.id }}"><span
+                                        class="{% ifequal category 'gr' %}active2{% endifequal %}">个人</span></a>
 
                             </div>
                         </li>
@@ -69,7 +72,8 @@
                                 <a href="?ct={{ category }}"><span class="active2">全部</span></a>
 
                                 {% for city in all_citys %}
-                                    <a href="?city={{ city.id }}&ct={{ category }}"><span class="">{{ city.name }}</span></a>
+                                    <a href="?city={{ city.id }}&ct={{ category }}"><span
+                                            class="">{{ city.name }}</span></a>
                                 {% endfor %}
 
                             </div>
@@ -83,10 +87,18 @@
                     {#   机构信息   #}
                     <div class="layout">
                         <div class="head">
+                            {#   排序规则  #}
                             <ul class="tab_header">
-                                <li class="active"><a href="?ct=&city=">全部</a></li>
-                                <li class=""><a href="?sort=students&ct=&city=">学习人数 &#8595;</a></li>
-                                <li class=""><a href="?sort=courses&ct=&city=">课程数 &#8595;</a></li>
+
+                                <li class="{% ifequal sort '' %}active{% endifequal %}"><a
+                                        href="?ct={{ category }}&city={{ city_id }}">全部</a></li>
+
+                                <li class="{% ifequal sort 'students' %}active{% endifequal %}"><a
+                                        href="?sort=students&ct={{ category }}&city={{ city_id }}">学习人数 &#8595;</a></li>
+
+                                <li class="{% ifequal sort 'courses' %}active{% endifequal %}"><a
+                                        href="?sort=courses&ct={{ category }}&city={{ city_id }}">课程数 &#8595;</a></li>
+
                             </ul>
                         </div>
 
@@ -106,10 +118,10 @@
                                         <a href="org-detail-homepage.html">
                                             <h1>{{ org.name }}</h1>
                                             <div class="pic fl">
+                                                {#是否认证和金牌#}
+                                                <img src="{% static 'images/authentication.png' %}"/>
 
-                                                <img src="../images/authentication.png"/>
-
-                                                <img src="../images/gold.png"/>
+                                                <img src="{% static 'images/gold.png' %}"/>
 
                                             </div>
                                         </a>
@@ -175,19 +187,20 @@
                 <div class="head">我要学习</div>
                 <form class="rightform" id="jsStayForm">
                     <div>
-                        <img src="../images/rightform1.png"/>
+                        <img src="{% static 'images/rightform1.png' %}"/>
                         <input type="text" name="name" id="companyName" placeholder="名字" maxlength="25"/>
                     </div>
                     <div>
-                        <img src="../images/rightform2.png"/>
+                        <img src="{% static 'images/rightform2.png' %}"/>
                         <input type="text" name="mobile" id="companyMobile" placeholder="联系电话"/>
                     </div>
                     <div>
-                        <img src="../images/rightform3.png"/>
+                        <img src="{% static 'images/rightform3.png' %}"/>
                         <input type="text" name="course_name" id="companyAddress" placeholder="课程名" maxlength="50"/>
                     </div>
                     <p class="error company-tips" id="jsCompanyTips"></p>
                     <input class="btn" type="text" id="jsStayBtn" value="立即咨询 >"/>
+                    {% csrf_token %}
                 </form>
             </div>
 
@@ -195,32 +208,46 @@
             <div class="right companyrank layout">
                 <div class="head">授课机构排名</div>
 
-                <dl class="des">
-                    <dt class="num fl">1</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>慕学网</h1></a>
-                        <p>北京市</p>
-                    </dd>
-                </dl>
+                {% for org in hot_orgs %}
+                    <dl class="des">
+                        <dt class="num fl">{{ forloop.counter }}</dt>
+                        <dd>
+                            <a href="/company/2/"><h1>{{ org.name }}</h1></a>
+                            <p>{{ org.address }}</p>
+                        </dd>
+                    </dl>
+                {% endfor %}
 
-                <dl class="des">
-                    <dt class="num fl">2</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>慕学网2</h1></a>
-                        <p>深圳市</p>
-                    </dd>
-                </dl>
-
-                <dl class="des">
-                    <dt class="num fl">3</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>北京大学</h1></a>
-                        <p>北京市</p>
-                    </dd>
-                </dl>
 
             </div>
 
         </div>
     </section>
+{% endblock %}
+{#js#}
+{% block custum_js %}
+    <script>
+        $(function () {
+            $(document).ready(function () {
+                $('#jsStayBtn').on('click',function () {
+                    $.ajax({
+                        cache:false,
+                        type:'POST',
+                        url:'{% url 'org:add_ask'%}',
+                        async:true,
+                        data:$('#jsStayForm').serialize(),
+                        success:function (data) {
+                            if (data.status=='success'){
+                                $('#jsStayForm')[0].reset();
+                                $('#jsCompanyTips').html(data.msg)
+                            }else if (data.status == 'fail'){
+                                $('#jsCompanyTips').html(data.msg)
+                                alert(data.msg)
+                            }
+                        }
+                    })
+                })
+            })
+        })
+    </script>
 {% endblock %}
