--- a/templates/courselist.html
+++ b/templates/courselist.html
@@ -32,7 +32,7 @@
     <section>
         <div class="wp">
             <ul class="crumbs">
-                <li><a href="index.html">首页</a>></li>
+                <li><a href="{% url 'index' %}">首页</a>></li>
                 <li>公开课</li>
             </ul>
         </div>
@@ -43,7 +43,8 @@
             <li>
                 <h2>课程类别</h2>
                 <div class="cont">
-                    <a href="?ct{{ city.id }}"><span style="color:{% ifequal category '' %}green{% endifequal %}">全部</span></a>
+                    <a href="?ct{{ city.id }}"><span
+                            style="color:{% ifequal category '' %}green{% endifequal %}">全部</span></a>
 
                     <a href="?ct{{ city.id }}"><span
                             class="{% ifequal category 'pxjg' %}active2{% endifequal %}">培训机构</span></a>
@@ -58,7 +59,9 @@
         </ul>
     </div>
     {#   课程总数  #}
-    <div class="all" style="padding-left: 940px;font-size: 15px;line-height: 20px;margin-top: 20px">共<span class="key">{{ course_nums }}</span>门</div>
+    <div class="all" style="padding-left: 940px;font-size: 15px;line-height: 20px;margin-top: 20px">共<span
+            class="key">{{ course_nums }}</span>门
+    </div>
 
 {% endblock %}
 
@@ -80,27 +83,27 @@
                             <div class="group_list">
 
                                 {#   内容列表项   #}
-                                {% for course in all_courses %}
+                                {% for course in all_courses.object_list %}
                                     <div class="box">
-                                    <a href="course-detail.html">
-                                        <img width="280" height="350" class="scrollLoading"
-                                             src="{{ MEDIA_URL }}{{ course.image }}">
-                                    </a>
-                                    <div class="des">
                                         <a href="course-detail.html">
-                                            <h2>{{ course.name }}</h2>
+                                            <img width="280" height="350" class="scrollLoading"
+                                                 src="{{ MEDIA_URL }}{{ course.image }}">
                                         </a>
-                                        <span class="fl">时长：<i class="key">{{ course.learn_times }}</i></span>
-                                        <span class="fr">学习人数：{{ course.students }}&nbsp;&nbsp;</span>
-                                    </div>
-                                    <div class="bottom">
-                                        <a href="course-detail.html"><span class="fl">来自{{ course.category }}</span></a>
-                                        <span class="star fr  notlogin
+                                        <div class="des">
+                                            <a href="course-detail.html">
+                                                <h2>{{ course.name }}</h2>
+                                            </a>
+                                            <span class="fl">时长：<i class="key">{{ course.learn_times }}</i></span>
+                                            <span class="fr">学习人数：{{ course.students }}&nbsp;&nbsp;</span>
+                                        </div>
+                                        <div class="bottom">
+                                            <a href="course-detail.html"><span class="fl">来自{{ course.category }}</span></a>
+                                            <span class="star fr  notlogin
                                         " data-favid="15">
                                         {{ course.fav_nums }}
                                     </span>
+                                        </div>
                                     </div>
-                                </div>
                                 {% endfor %}
 
                             </div>
@@ -108,15 +111,34 @@
                             <div class="pageturn">
 
                                 <ul class="pagelist">
+                                    {#   上一页   #}
+                                    {% if all_courses.has_previous %}
+                                        <li class="long"><a href="?{{ all_courses.previous_page_number.querystring }}"
+                                                            class="page">上一页</a></li>
+                                    {% endif %}
+                                    {#   页码循环    #}
+                                    {% for page in all_courses.pages %}
+                                        {% if page %}
+                                            {% ifequal page all_courses.number %}
+                                                {# 用户点击的是否是当前页码 #}
+                                                <li class="active"><a
+                                                        href="?{{ page.querystring }}">{{ page }}</a>
+                                                </li>
+                                            {% else %}
+                                                <li class="page"><a
+                                                        href="?{{ page.querystring }}">{{ page }}</a>
+                                                </li>
+                                            {% endifequal %}
+                                        {% else %}
+                                            <li class="none">...</li>
+                                        {% endif %}
+                                    {% endfor %}
 
-                                    <li class="active"><a href="?page=1">1</a></li>
-
-
-                                    <li><a href="?page=2" class="page">2</a></li>
-
-
-                                    <li class="long"><a href="?page=2">下一页</a></li>
-
+                                    {#  下一页   #}
+                                    {% if all_courses.has_next %}
+                                        <li class="long"><a href="?{{ all_courses.next_page_number.querystring }}"
+                                                            class="page">下一页</a></li>
+                                    {% endif %}
                                 </ul>
                             </div>
 
