课程机构类和课程类关联
课程机构类和课程一对多进行关联，在多(课程类)加入外键course_org,进行迁移数据库，并显示在courselist页面中。

--- a/templates/courselist.html
+++ b/templates/courselist.html
@@ -97,11 +97,10 @@
                                             <span class="fr">学习人数：{{ course.students }}&nbsp;&nbsp;</span>
                                         </div>
                                         <div class="bottom">
-                                            <a href="course-detail.html"><span class="fl">来自{{ course.category }}</span></a>
-                                            <span class="star fr  notlogin
-                                        " data-favid="15">
-                                        {{ course.fav_nums }}
-                                    </span>
+
+                                            <a href="course-detail.html"><span class="fl">{{ course.course_org.name }}</span></a>
+
+                                            <span class="star fr  notlogin" data-favid="15">{{ course.fav_nums }}</span>
                                         </div>
                                     </div>
                                 {% endfor %}
