--- a/templates/base.html
+++ b/templates/base.html
@@ -81,10 +81,28 @@
                 </div>
             </div>
 
-            {#跳转链接#}
-            {% block  chiocelist %}
+            {# 跳转链接列表 #}
+            <nav>
+                <div class="nav">
+                    <div class="wp">
+                        <ul>
+                            <li class="{% if request.path == '/' %}active{% endif %} "><a href="{% url 'index' %}">首页</a></li>
 
-            {% endblock %}
+                            <li class="{% if request.path|slice:'7' == '/course' %}active{% endif %} ">
+                                <a href="{% url 'course:list' %}">
+                                    公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="teachers-list.html">授课教师</a>
+                            </li>
+
+                            <li class="{% if request.path|slice:'4' == '/org' %}active{% endif %}"><a href="{% url 'org:list' %}">授课机构</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
         </div>
         </div>
