--- a/templates/coursedetail.html
+++ b/templates/coursedetail.html
@@ -84,7 +84,7 @@
                     <div class="right">
                         <div class="head">
                             <h1>授课机构</h1>
-                            <p>世界名校，课程权威</p>
+                            <p>{{ course.course_org.desc }}</p>
                         </div>
                         <div class="pic">
                             <a href="/company/14/">
@@ -241,20 +241,20 @@
                 <div class="right layout">
                     <div class="head">相关课程推荐</div>
                     <div class="group_recommend">
-
-                        <dl>
+                        {% for tuicourse in course_list %}
+                            <dl>
                             <dt>
                                 <a target="_blank" href="">
                                     <img width="240" height="220" class="scrollLoading"
-                                         src="../media/courses/2016/11/540e57300001d6d906000338-240-135_mvvGYHL.jpg"/>
+                                         src="{{ tuicourse.image.url }}"/>
                                 </a>
                             </dt>
                             <dd>
-                                <a target="_blank" href=""><h2> django实战项目</h2></a>
-                                <span class="fl">学习时长：<i class="key">0</i></span>
+                                <a target="_blank" href=""><h2> {{ tuicourse.name}}</h2></a>
+                                <span class="fl">学习时长：<i class="key">{{ tuicourse.learn_times }}</i></span>
                             </dd>
                         </dl>
-
+                        {% endfor %}
 
                     </div>
                 </div>
