评论的加载

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,18 +33,18 @@
                     {% if user.is_authenticated %}
                         <div class="personal">
                             <dl class="user fr">
-                                <dd>EricLee<img class="down fr" src="/static/images/top_down.png"/></dd>
-                                <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/>
+                                <dd>{{ user.nick_name }}<img class="down fr" src="/static/images/top_down.png"/></dd>
+                                <dt><img width="20" height="20" src="{{ user.image.url }}"/>
                                 </dt>
                             </dl>
                             <div class="userdetail">
                                 <dl>
                                     <dt><img width="80" height="80"
-                                             src="/static/media/image/2016/12/default_big_14.png"/>
+                                             src="{{ user.image.url }}"/>
                                     </dt>
                                     <dd>
-                                        <h2>django</h2>
-                                        <p>EricLee</p>
+                                        <h2></h2>
+                                        <p>{{ user.username }}</p>
                                     </dd>
                                 </dl>
                                 <div class="btn">
