--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@
                     <div class="module3_1 left">
                         <img width="228" height="463" src="/static/images/module3_1.jpg"/>
                         <p class="fisrt_word">名校来袭<br/>权威认证</p>
-                        <a class="more" href="orglist.html">查看更多机构 ></a>
+                        <a class="more" href="org-list.html">查看更多机构 ></a>
                     </div>
                     <div class="right">
                         <ul>
