--- a/templates/index1.html
+++ b/templates/index1.html
@@ -87,7 +87,7 @@
                             <li>
                                 <a href="teachers-list.html">授课教师</a>
                             </li>
-                            <li><a href="orglist.html">授课机构</a></li>
+                            <li><a href="org-list.html">授课机构</a></li>
                         </ul>
                     </div>
                 </div>
@@ -335,7 +335,7 @@
                 <div class="module3_1 left">
                     <img width="228" height="463" src="/static/images/module3_1.jpg"/>
                     <p class="fisrt_word">名校来袭<br/>权威认证</p>
-                    <a class="more" href="orglist.html">查看更多机构 ></a>
+                    <a class="more" href="org-list.html">查看更多机构 ></a>
                 </div>
                 <div class="right">
                     <ul>
