个人中心--收藏和教师收藏

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3637,7 +3637,9 @@ footer .footer .line {
 .butler_detail_list .btn .btn1 {
     background: #717171 url(../images/btn3.png) no-repeat 15px center;
 }
-
+.butler_detail_list .btn .btn3 {
+    background: #717171 url(../images/btn5.png) no-repeat 15px center;
+}
 .butler_detail_list .btn .btn2 {
     background: #3a3a3a url(../images/btn4.png) no-repeat 20px center;
     position: relative;
