--- a/templates/usercenter-fav-course.html
+++ b/templates/usercenter-fav-course.html
@@ -46,9 +46,8 @@
                             </div>
 
                             <div class="bottom">
-                                <span id="id" style="display: none">{{ course.id }}</span>
                                 <span class="fl">{{ course.course_org.name }}</span>
-                                <span class="delete-group fr jsDeleteFav_course" data-favid="12" id="delete"></span>
+                                <span class="delete-group fr jsDeleteFav_course" data-favid="12"></span>
                             </div>
                         </div>
                     {% endfor %}
@@ -62,159 +61,6 @@
 
 
 {% block custom_js %}
-    <script>
-        $(function () {
-            $(document).ready(function () {
-                $('#delete').on('click', function () {
-                    alert('ok')
-                    $.ajax({
-                        cache: false,
-                        type: 'POST',
-                        url: '{% url 'op:delete_fav'%}',
-                        async: true,
-                        data: {'fav_id': $('#id').innerText.val(), 'fav_type': 1},
-                        success: function (data) {
-                            if (data.status == 'success') {
-                                alert(data.msg)
-                                //} else if (data.status == 'fail') {
-                                //  $('#jsCompanyTips').html(data.msg)
-                                //alert(data.msg)
-                                //}
-                                window.location.reload()
-                            }
-                        }
-                    })
-                })
-            })
-        })
-    </script>
+
 {% endblock %}
-{#<script type="text/javascript">#}
-{#    $(document).ready(function () {#}
-{#        $('.jsDeleteFav_course').on('click', function () {#}
-{#            var _this = $(this),#}
-{#                favid = _this.attr('data-favid');#}
-{#            alert(favid)#}
-{#            $.ajax({#}
-{#                cache: false,#}
-{#                type: "POST",#}
-{#                url: "/org/add_fav/",#}
-{#                data: {#}
-{#                    fav_type: 1,#}
-{#                    fav_id: favid,#}
-{#                    csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'#}
-{#                },#}
-{#                async: true,#}
-{#                success: function (data) {#}
-{#                    _this.parent().parent().parent().remove()#}
-{#                }#}
-{#            });#}
-{#        });#}
-{#    });#}
-{#    $(document).ready(function () {#}
-{#        $('.jsDeleteFav_teacher').on('click', function () {#}
-{#            var _this = $(this),#}
-{#                favid = _this.attr('data-favid');#}
-{#            $.ajax({#}
-{#                cache: false,#}
-{#                type: "POST",#}
-{#                url: "/org/add_fav/",#}
-{#                data: {#}
-{#                    fav_type: 3,#}
-{#                    fav_id: favid,#}
-{#                    csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'#}
-{#                },#}
-{#                async: true,#}
-{#                success: function (data) {#}
-{#                    _this.parent().parent().parent().remove()#}
-{#                }#}
-{#            });#}
-{#        });#}
-{#    });#}
-{##}
-{#    $(document).ready(function () {#}
-{#        $('.jsDeleteFav_org').on('click', function () {#}
-{#            var _this = $(this),#}
-{#                favid = _this.attr('data-favid');#}
-{#            $.ajax({#}
-{#                cache: false,#}
-{#                type: "POST",#}
-{#                url: "/org/add_fav/",#}
-{#                data: {#}
-{#                    fav_type: 2,#}
-{#                    fav_id: favid,#}
-{#                    csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'#}
-{#                },#}
-{#                async: true,#}
-{#                success: function (data) {#}
-{#                    _this.parent().parent().parent().remove()#}
-{#                }#}
-{#            });#}
-{#        });#}
-{#    });#}
-{#</script>#}
-{##}
-{#<script>#}
-{#    var shareUrl = '',#}
-{#        shareText = '',#}
-{#        shareDesc = '',#}
-{#        shareComment = '';#}
-{#    $(function () {#}
-{#        $(".bdsharebuttonbox a").mouseover(function () {#}
-{#            var type = $(this).attr('data-cmd'),#}
-{#                $parent = $(this).parent('.bdsharebuttonbox'),#}
-{#                fxurl = $parent.attr('data-url'),#}
-{#                fxtext = $parent.attr('data-text'),#}
-{#                fxdesc = $parent.attr('data-desc'),#}
-{#                fxcomment = $parent.attr('data-comment');#}
-{#            switch (type) {#}
-{#                case 'tsina':#}
-{#                case 'tqq':#}
-{#                case 'renren':#}
-{#                    shareUrl = fxurl;#}
-{#                    shareText = fxdesc;#}
-{#                    shareDesc = '';#}
-{#                    shareComment = '';#}
-{#                    break;#}
-{#                default :#}
-{#                    shareUrl = fxurl;#}
-{#                    shareText = fxtext;#}
-{#                    shareDesc = fxdesc;#}
-{#                    shareComment = fxcomment;#}
-{#                    break;#}
-{#            }#}
-{#        });#}
-{#    });#}
-{##}
-{#    function SetShareUrl(cmd, config) {#}
-{#        if (shareUrl) {#}
-{#            config.bdUrl = "" + shareUrl;#}
-{#        }#}
-{#        if (shareText) {#}
-{#            config.bdText = shareText;#}
-{#        }#}
-{#        if (shareDesc) {#}
-{#            config.bdDesc = shareDesc;#}
-{#        }#}
-{#        if (shareComment) {#}
-{#            config.bdComment = shareComment;#}
-{#        }#}
-{##}
-{#        return config;#}
-{#    }#}
-{##}
-{#    window._bd_share_config = {#}
-{#        "common": {#}
-{#            "onBeforeClick": SetShareUrl,#}
-{#            "bdPic": "",#}
-{#            "bdMini": "2",#}
-{#            "searchPic": "1",#}
-{#            "bdMiniList": false#}
-{#        },#}
-{#        "share": {#}
-{#            "bdSize": "16"#}
-{#        }#}
-{#    };#}
-{#    with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com../api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];#}
-{#</script>#}
 
