--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                             </ul>
                         </div>
                         <input id="search_keywords" class="fl" type="text" value="" placeholder="请输入搜索内容"/>
-                        <img class="search_btn fr" id="jsSearchBtn" src="/static/images/search_btn.png"/>
+                        <a href=""><img class="search_btn fr" id="jsSearchBtn" src="/static/images/search_btn.png"/></a>
                     </div>
                 </div>
             </div>
